kubernetes/clearsessions-v1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: clearsessions-manual
spec:
  restartPolicy: Never
  containers:
  - name: cleanup
    image: django-test:latest
    imagePullPolicy: IfNotPresent
    command: ["python", "manage.py", "clearsessions"]
