kubernetes/migrate-job.yaml
apiVersion: v1
kind: Pod
metadata:
  name: migrate-manual
spec:
  restartPolicy: Never
  containers:
  - name: cleanup
    image: django-test:latest
    imagePullPolicy: IfNotPresent
    command: ["python", "manage.py", "migrate"]
