kubernetes/django-deployment-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-site-deployment
  labels:
    run: django-site
spec:
  selector:
    matchLabels:
      run: django-site
  template:
    metadata:
      labels:
        run: django-site
    spec:
      containers:
      - name: django-site
        image: django-test:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always


---
apiVersion: v1
kind: Service
metadata:
  name: django-site
  labels:
    run: django-site
  namespace: default
spec:
  selector:
    run: django-site
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
